src/MiniJavaParser.py
# Generated from MiniJava.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'.'", "'length'", "'this'", 
                     "'new'", "'!'", "'if'", "'else'", "'while'", "'System.out.println'", 
                     "'='", "<INVALID>", "<INVALID>", "<INVALID>", "'&&'", 
                     "'*'", "'<'", "'+'", "'-'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "Comment", "LineComment", "And", 
                      "Mul", "Less", "Add", "Min", "TRUE", "FALSE", "IntergerLiteral", 
                      "Identifier" ]

    RULE_goal = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_atype = 5
    RULE_expression = 6
    RULE_statement = 7

    ruleNames =  [ "goal", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "atype", "expression", "statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    WS=29
    Comment=30
    LineComment=31
    And=32
    Mul=33
    Less=34
    Add=35
    Min=36
    TRUE=37
    FALSE=38
    IntergerLiteral=39
    Identifier=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MiniJavaParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.mainClass()
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__0:
                self.state = 17
                self.classDeclaration()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(MiniJavaParser.T__0)
            self.state = 24
            self.match(MiniJavaParser.Identifier)
            self.state = 25
            self.match(MiniJavaParser.T__1)
            self.state = 26
            self.match(MiniJavaParser.T__2)
            self.state = 27
            self.match(MiniJavaParser.T__3)
            self.state = 28
            self.match(MiniJavaParser.T__4)
            self.state = 29
            self.match(MiniJavaParser.T__5)
            self.state = 30
            self.match(MiniJavaParser.T__6)
            self.state = 31
            self.match(MiniJavaParser.T__7)
            self.state = 32
            self.match(MiniJavaParser.T__8)
            self.state = 33
            self.match(MiniJavaParser.T__9)
            self.state = 34
            self.match(MiniJavaParser.Identifier)
            self.state = 35
            self.match(MiniJavaParser.T__10)
            self.state = 36
            self.match(MiniJavaParser.T__1)
            self.state = 37
            self.statement()
            self.state = 38
            self.match(MiniJavaParser.T__11)
            self.state = 39
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(MiniJavaParser.T__0)
            self.state = 42
            self.match(MiniJavaParser.Identifier)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.T__12:
                self.state = 43
                self.match(MiniJavaParser.T__12)
                self.state = 44
                self.match(MiniJavaParser.Identifier)


            self.state = 47
            self.match(MiniJavaParser.T__1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 48
                self.varDeclaration()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__2:
                self.state = 54
                self.methodDeclaration()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atype(self):
            return self.getTypedRuleContext(MiniJavaParser.AtypeContext,0)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.atype()
            self.state = 63
            self.match(MiniJavaParser.Identifier)
            self.state = 64
            self.match(MiniJavaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.AtypeContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.AtypeContext,i)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(MiniJavaParser.T__2)
            self.state = 67
            self.atype()
            self.state = 68
            self.match(MiniJavaParser.Identifier)
            self.state = 69
            self.match(MiniJavaParser.T__6)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 70
                self.atype()
                self.state = 71
                self.match(MiniJavaParser.Identifier)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniJavaParser.T__14:
                    self.state = 72
                    self.match(MiniJavaParser.T__14)
                    self.state = 73
                    self.atype()
                    self.state = 74
                    self.match(MiniJavaParser.Identifier)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 83
            self.match(MiniJavaParser.T__10)
            self.state = 84
            self.match(MiniJavaParser.T__1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.varDeclaration() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__23) | (1 << MiniJavaParser.T__25) | (1 << MiniJavaParser.T__26) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 91
                self.statement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MiniJavaParser.T__15)
            self.state = 98
            self.expression(0)
            self.state = 99
            self.match(MiniJavaParser.T__13)
            self.state = 100
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_atype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BOOLContext(AtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBOOL" ):
                listener.enterBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBOOL" ):
                listener.exitBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBOOL" ):
                return visitor.visitBOOL(self)
            else:
                return visitor.visitChildren(self)


    class INTARRAYContext(AtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINTARRAY" ):
                listener.enterINTARRAY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINTARRAY" ):
                listener.exitINTARRAY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINTARRAY" ):
                return visitor.visitINTARRAY(self)
            else:
                return visitor.visitChildren(self)


    class IDContext(AtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterID" ):
                listener.enterID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitID" ):
                listener.exitID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitID" ):
                return visitor.visitID(self)
            else:
                return visitor.visitChildren(self)


    class INTContext(AtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINT" ):
                listener.enterINT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINT" ):
                listener.exitINT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINT" ):
                return visitor.visitINT(self)
            else:
                return visitor.visitChildren(self)



    def atype(self):

        localctx = MiniJavaParser.AtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atype)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = MiniJavaParser.INTARRAYContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(MiniJavaParser.T__16)
                self.state = 103
                self.match(MiniJavaParser.T__8)
                self.state = 104
                self.match(MiniJavaParser.T__9)
                pass

            elif la_ == 2:
                localctx = MiniJavaParser.BOOLContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MiniJavaParser.T__17)
                pass

            elif la_ == 3:
                localctx = MiniJavaParser.INTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(MiniJavaParser.T__16)
                pass

            elif la_ == 4:
                localctx = MiniJavaParser.IDContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(MiniJavaParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NEWIDContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNEWID" ):
                listener.enterNEWID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNEWID" ):
                listener.exitNEWID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNEWID" ):
                return visitor.visitNEWID(self)
            else:
                return visitor.visitChildren(self)


    class NEWINTContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNEWINT" ):
                listener.enterNEWINT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNEWINT" ):
                listener.exitNEWINT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNEWINT" ):
                return visitor.visitNEWINT(self)
            else:
                return visitor.visitChildren(self)


    class NOTContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNOT" ):
                listener.enterNOT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNOT" ):
                listener.exitNOT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNOT" ):
                return visitor.visitNOT(self)
            else:
                return visitor.visitChildren(self)


    class BRACKETContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBRACKET" ):
                listener.enterBRACKET(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBRACKET" ):
                listener.exitBRACKET(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBRACKET" ):
                return visitor.visitBRACKET(self)
            else:
                return visitor.visitChildren(self)


    class VARContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVAR" ):
                listener.enterVAR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVAR" ):
                listener.exitVAR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVAR" ):
                return visitor.visitVAR(self)
            else:
                return visitor.visitChildren(self)


    class ARRAYSEARCHContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterARRAYSEARCH" ):
                listener.enterARRAYSEARCH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitARRAYSEARCH" ):
                listener.exitARRAYSEARCH(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitARRAYSEARCH" ):
                return visitor.visitARRAYSEARCH(self)
            else:
                return visitor.visitChildren(self)


    class BIOPContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBIOP" ):
                listener.enterBIOP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBIOP" ):
                listener.exitBIOP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBIOP" ):
                return visitor.visitBIOP(self)
            else:
                return visitor.visitChildren(self)


    class LENGTHContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLENGTH" ):
                listener.enterLENGTH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLENGTH" ):
                listener.exitLENGTH(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLENGTH" ):
                return visitor.visitLENGTH(self)
            else:
                return visitor.visitChildren(self)


    class THISContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTHIS" ):
                listener.enterTHIS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTHIS" ):
                listener.exitTHIS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTHIS" ):
                return visitor.visitTHIS(self)
            else:
                return visitor.visitChildren(self)


    class BOOLLITContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.BOOL = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBOOLLIT" ):
                listener.enterBOOLLIT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBOOLLIT" ):
                listener.exitBOOLLIT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBOOLLIT" ):
                return visitor.visitBOOLLIT(self)
            else:
                return visitor.visitChildren(self)


    class INTLITContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IntergerLiteral(self):
            return self.getToken(MiniJavaParser.IntergerLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINTLIT" ):
                listener.enterINTLIT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINTLIT" ):
                listener.exitINTLIT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINTLIT" ):
                return visitor.visitINTLIT(self)
            else:
                return visitor.visitChildren(self)


    class FUNCTIONContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFUNCTION" ):
                listener.enterFUNCTION(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFUNCTION" ):
                listener.exitFUNCTION(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFUNCTION" ):
                return visitor.visitFUNCTION(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniJavaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = MiniJavaParser.BOOLLITContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 111
                localctx.BOOL = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==MiniJavaParser.TRUE or _la==MiniJavaParser.FALSE):
                    localctx.BOOL = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
